--- a/CSS/POS.css
+++ b/CSS/POS.css
@@ -14,7 +14,7 @@ body{
 nav{
     width: 100%;
     height: 125px;
-    background-color:#0008;
+    background-color:rgba(152, 243, 6, 0.533);
     line-height:80px ;
 
 
@@ -34,7 +34,7 @@ nav ul li{
 
 }
 nav ul li:hover{
-    background-color: #8D6E63;
+    background-color: #f3ef09;
 }
 nav ul li a {
     text-decoration: none;
